fix: remove fixed width for about section images on small screens for better responsiveness

--- a/rg_web/src/styles.scss
+++ b/rg_web/src/styles.scss
@@ -955,7 +955,6 @@ article th {
 
 @media screen and (max-width: 400px) {
   .about img {
-    width: 300px;
     float: none;
     display: block;
     margin: 15px auto;
